--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <h2>Autonomía tecnológica</h2>
             <br>
             <p>Presentamos una aplicación interactiva para dar independencia y bienestar en personas con discapacidad visual, incluyendo funciones de alta tecnologia. Cambiando la forma de interacción de esta población con el mundo exterior.</p>
-            <video class="video" controls src="Proyecto.mp4"></video>
+            <video class="video" controls src="https://youtu.be/maipAcMO1es?si=BWa0jwxhqLX1LiA_"></video>
         </ul>
         </section>
 
