--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <h2>Autonomía tecnológica</h2>
             <br>
             <p>Presentamos una aplicación interactiva para dar independencia y bienestar en personas con discapacidad visual, incluyendo funciones de alta tecnologia. Cambiando la forma de interacción de esta población con el mundo exterior.</p>
-            <video class="video" controls src="https://youtu.be/maipAcMO1es?si=BWa0jwxhqLX1LiA_"></video>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/maipAcMO1es?si=BWa0jwxhqLX1LiA_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>></video>
         </ul>
         </section>
 
@@ -68,8 +68,7 @@
 
 <section class="caso" id="exito">
     <h4>Caso de exito y prototipo</h4>
-    <video class="video2" controls src="Video Empresa.mp4"></video>
-</section>
+    <iframe class="video2" width="560" height="315" src="https://www.youtube.com/embed/Y39_hzw8WF0?si=zgjQ10P_NpMbnwZI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></section>
 
  <footer>
     <h5>Siguenos y enterate del lanzamiento</h5>
